deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: purser
  labels:
    app.kubernetes.io/name: purser
