deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: purser
  namespace: purser
  labels:
    app.kubernetes.io/name: purser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: purser
  ports:
    - name: http
      port: 80
      targetPort: http
